--- a/css/main.css
+++ b/css/main.css
@@ -37,43 +37,34 @@ img {
 
 /* Navigation */
 .main-nav ul {
-    display: inline-grid;
-    grid-gap: 10px;
-    padding: 0;
+    display: inline-flex;
+    padding-left: 27rem;
     list-style: none;
     grid-template-columns: repeat(4, 1fr);
     float: right;
 }
 
 .main-nav a {
-    background: var(--primary);
-    display: block;
     text-decoration: none;
     padding: 0.8rem;
     text-align: center;
     color: var(--dark);
     text-transform: uppercase;
     font-size: 1.1rem;
-    box-shadow: var(--shadow);
-}
-.header {
-}
-.main-nav a:hover {
-    background: var(--dark);
-    color: var(--light);
 }
 
 /* Top Container */
 .top-container {
+
 }
 
 /* Showcase */
 .showcase {
     grid-area: showcase;
-    min-height: 400px;
-    background-image: url("http://i.epvpimg.com/V7w6gab.jpg");
+    min-height: 300px;
+    background-image: url("http://i.epvpimg.com/meExgab.jpg");
     background-size: cover;
-    background-position: top;
+    background-position:top;
     padding: 3rem;
     display: flex;
     flex-direction: column;
@@ -83,13 +74,13 @@ img {
 }
 
 .showcase h1    {
-    font-size: 3rem;
+    font-size: 5.5rem;
     margin-bottom: 0;
     color: var(--light);
 }
 
 .showcase p {
-    font-size: 1.3rem;
+    font-size: 2rem;
     margin-top: 0;
     color: var(--light);
 }
@@ -106,6 +97,7 @@ img {
     text-align: center;
     padding: 1.5rem 2rem;
     box-shadow: var(--shadow);
+
 }
 
 /* Info */
